# Synthia

./: Cargo.toml  LICENSE  README.md  fly_me_to_the_moon.json  main.rs  piano.csv  piano_chord.csv  piano_chord.json  piano_overtones.csv  piano_tone.csv  piano_tone.json  polyphonic_song.json  song.json  sweet_dreams.json  sweet_dreams_piano.json
pyton/: analyze_sample.ipynb  analyze_song.ipynb  c5_frequencies_amplitudes.csv  c5_prominent_frequencies_amplitudes.csv
src/: lib.rs  main.rs
src/audio/: mod.rs  player.rs  waveform.rs
src/song/: instrument.rs  midi_packet.rs  mod.rs  note_status.rs  song.rs
src/utils/: mod.rs  utils.rs
