[package]
name = "Synthia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.15"  # For audio playback
serde = { version = "1.0", features = ["derive"] }  # For serializing and deserializing JSON
serde_json = "1.0"  # For handling JSON

